# pydrizzle-orm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: quickstart.md  releasing.md
docs/example/: README.md  app.py  compose.yaml  pydrizzle.toml  pyproject.toml
docs/example/models/: __init__.py  blog.py
docs/example/schemas/: native_schema.py  sqlalchemy_models.py  typescript_schema.ts
docs/example/static/: index.html
src/pydrizzle_orm/: __init__.py  __main__.py  cli.py  codegen.py  config.py  ir.py  logging.py  pg.py  runtime.py  types.py
src/pydrizzle_orm/parsers/: __init__.py  native.py  sqlalchemy.py  typescript.py
tests/: test_cli.py  test_codegen.py  test_dsl.py  test_e2e.py  test_example_app.py  test_example_smoke.py  test_native_parser.py  test_runtime.py  test_sqlalchemy_parser.py  test_typescript_parser.py
